[tool.poetry]
name = "dynaflow"
version = "0.0.3-alpha"
description = "AWS Dynamodb backend tracking store for MLFlow"
authors = ["ArrichM <maximilianjakob.arrich@student.unisg.ch>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ArrichM/dynaflow"
repository = "https://github.com/ArrichM/dynaflow"
keywords = ["mlflow", "dynamodb", "tracking", "mlops", "aws"]


[tool.poetry.dependencies]
python = "3.11.*"
click = "8.1.7"
pynamodb = "5.5.0"
mlflow = "2.8.1"
boto3 = "1.29.2"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pre-commit = "2.20.0"
black = "22.12.0"
flake8 = "4.0.1"
isort = "5.12.0"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=./src --cov-report term-missing --strict-markers"
testpaths = ["tests"]

[tool.poetry.scripts]
dynaflow = 'dynaflow.cli:dynaflow'

[tool.poetry.plugins]

[tool.poetry.plugins."mlflow.tracking_store"]
"dynamodb" = "dynaflow.tracking_store:DynamodbTrackingStore"
[tool.poetry.plugins."mlflow.model_registry_store"]
"dynamodb" = "dynaflow.model_registry:DynamodbModelStore"
